# AutoService_Book

./: Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  pytest.ini  req.txt  requirements.txt
auto_service_book/: asgi.py  settings.py  urls.py  wsgi.py
service_book/: __init__.py  admin.py  apps.py  context_processors.py  export_csv_views.py  forms.py  models.py  signals.py  urls.py  views.py
service_book/templates/: add_auto.html  add_fuel_expense.html  add_service.html  base.html  contact_us.html  edit_auto.html  edit_fuel_expense.html  edit_service.html  fuel_expense.html  main.html  my_autos.html  profile.html  service_history.html
service_book/templates/account/: login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
service_book/templates/autos/: add_auto.html  edit_auto.html  my_autos.html
service_book/templates/carparts/: add_carpart.html  edit_carpart.html  my_carparts.html
service_book/templates/fuel_expense/: add_fuel_expense.html  edit_fuel_expense.html  fuel_expense.html
service_book/templates/includes/: extra_scripts.html  nav_menu.html
service_book/templates/other_expenses/: add_other_expense.html  edit_other_expense.html  other_expenses.html
service_book/templates/service_records/: add_service.html  (+2 more)
service_book/templatetags/: email_filters.py
static/css/: styles.css
static/text/: home_intro.txt
tests/: tests_autos.py  tests_carparts.py  tests_expenses.py  tests_export.py  tests_fuel.py  tests_service.py
