[tool.poetry]
name = "AutoService_Book"
version = "0.1.0"
description = "AutoService Book** is your reliable assistant for tracking and managing your car’s service history. This web application, built as a portfolio project, showcases skills in Django development, database management, and creating user-friendly interfaces."
authors = ["maxx <maxpetrikin@gmail.com>"]
readme = "README.md"
packages = [{ include = "auto_service_book" }]

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
beautifulsoup4 = "4.13.4"
coverage = "7.9.1"
crispy-bootstrap5 = "2025.4"
Django = "5.2"
django-allauth = "65.8.1"
django-bootstrap5 = "25.1"
django-crispy-forms = "2.4"
django-jazzmin = "3.0.1"
psycopg = "3.2.9"
python-decouple = "3.8"
soupsieve = "2.7"
sqlparse = "0.5.3"
typing_extensions = "4.13.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
